...
              route: '/dashboard',
              isSelected: currentRoute == '/dashboard',
            ),
            _buildNavItem(
              context: context,
              iconPath: AppImages.createNewTask,
              label: 'Create',
              route: '/create-project',
              isSelected: currentRoute == '/create-project',
            ),
            _buildNavItem(
              context: context,
              iconPath: AppImages.taskList,
...
              route: '/messages',
              isSelected: currentRoute == '/messages',
            ),
            _buildNavItem(
              context: context,
              iconPath: AppImages.teamMember,
              label: 'Community',
              route: '/community',
              isSelected: currentRoute == '/community',
            ),
          ],
        ),
      ),
...
